# MyJniCmake

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/walker/myjnicmake/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_hello.cpp
app/src/main/java/com/walker/myjnicmake/: MainActivity.java
app/src/main/java/com/walker/myjnicmake/jni/: NativeFun.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/walker/myjnicmake/: ExampleUnitTest.java
genlibs/: build.gradle
genlibs/src/androidTest/java/com/walker/genlibs/: ExampleInstrumentedTest.java
genlibs/src/main/: AndroidManifest.xml
genlibs/src/main/cpp/: CMakeLists.txt
genlibs/src/main/cpp/jsoncpp/: CMakeLists.txt
genlibs/src/main/res/values/: strings.xml
genlibs/src/test/java/com/walker/genlibs/: ExampleUnitTest.java
